Fix: home page distorted at edges, take out the padding 1rem (padding removed, fixed page)

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -108,7 +108,6 @@ main {
     /* Make main element take up any surplus space to push footer down */
     flex: 1 0 auto;
     margin-top: 45px;
-    padding: 1rem;
     max-width: 1800px;
     margin-right: auto;
     margin-left: auto;
